<resources>
    <string name="app_name">Mis redes sociales</string>
    <string name="nav_drawer_open">Abrir cajón</string>
    <string name="nav_drawer_close">Cerrar cajón</string>

    <string name="home">Inicio</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="google_plus">Google Plus</string>
    <string name="twitter">Twitter</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="messenger">Messenger</string>
    <string name="sms">SMS</string>

    <string name="nombre_usuario">Sara Caballero</string>
    <string name="correo_usuario">aracelli.caballero@gmail.com</string>

    <!--Etiquetas de los tabs-->
    <string name="tab_noticias">Noticias</string>
    <string name="tab_solicitudes">Solicitudes</string>
    <string name="tab_versionweb">Versión web</string>
    <string name="tab_buscar">Buscar</string>
    <string name="tab_publicar">Publicar</string>
    <string name="tab_actividad">Actividad</string>
    <string name="tab_aplicaciones">Aplicaciones</string>
    <string name="tab_circulos">Círculos</string>
    <string name="tab_notificaciones">Notificaciones</string>
    <string name="tab_mensajes">Mensajes</string>
    <string name="compartir">Compartir</string>
    <string name="configuracion">Configuración</string>

    <string name="titulo_dialogo_compartir">Selecciona donde quieres compartir esta aplicación:</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmacion">Confirmación</string>
    <string name="confirma_conpartir">¿Compartir esta aplicación a través de los medios seleccionados?</string>
    <string name="mensaje_compartir">Compartiste esta aplicación a través de:</string>

    <string name="no">No</string>
    <string name="si">Si</string>

    <string-array name="tabs_facebook">
        <item>@string/tab_noticias</item>
        <item>@string/tab_solicitudes</item>
        <item>@string/tab_versionweb</item>
    </string-array>

    <string-array name="tabs_instagram">
        <item>@string/tab_buscar</item>
        <item>@string/tab_publicar</item>
        <item>@string/tab_actividad</item>
    </string-array>

    <string-array name="tabs_googleplus">
        <item>@string/tab_aplicaciones</item>
        <item>@string/tab_circulos</item>
        <item>@string/tab_notificaciones</item>
    </string-array>

    <string-array name="tabs_twitter">
        <item>@string/tab_notificaciones</item>
        <item>@string/tab_mensajes</item>
        <item>@string/tab_buscar</item>
    </string-array>

    <string-array name="opciones_compartir">
        <item>@string/facebook</item>
        <item>@string/twitter</item>
        <item>@string/instagram</item>
        <item>@string/google_plus</item>
        <item>@string/whatsapp</item>
        <item>@string/messenger</item>
        <item>@string/sms</item>
    </string-array>

</resources>
