<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/primer_grupo"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_facebook"
            android:icon="@drawable/tab_facebook"
            android:title="@string/facebook" />

        <item
            android:id="@+id/nav_instagram"
            android:icon="@drawable/tab_instagram"
            android:title="@string/instagram" />

        <item
            android:id="@+id/nav_googleplus"
            android:icon="@drawable/tab_googleplus"
            android:title="@string/google_plus" />

        <item
            android:id="@+id/nav_twitter"
            android:icon="@drawable/tab_twitter"
            android:title="@string/twitter" />

    </group>

</menu>